cluster/namespaces/spring-petclinic-prod/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-petclinic-prod
spec:
  finalizers:
  - kubernetes
