cluster/namespaces/spring-petclinic-prod/networkpolicies.yaml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
items:

# ----------------------------------
# Policies
#    - default deny
#    - allow-from-self
#    - allow-from-global-namespaces
# ----------------------------------
- apiVersion: extensions/v1beta1
  kind: NetworkPolicy
  metadata:
    name: default-deny
    namespace: spring-petclinic-prod
  spec:
    podSelector: {}
    policyTypes:
    - Ingress

- apiVersion: extensions/v1beta1
  kind: NetworkPolicy
  metadata:
    name: allow-from-self
    namespace: spring-petclinic-prod
  spec:
    ingress:
    - from:
      - podSelector: {}
    podSelector: {}
    policyTypes:
    - Ingress

- apiVersion: extensions/v1beta1
  kind: NetworkPolicy
  metadata:
    name: allow-from-global-namespaces
    namespace: spring-petclinic-prod
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: default
    podSelector: {}
    policyTypes:
    - Ingress
